--- a/.github/workflows/sonarqube-public-repo.yml
+++ b/.github/workflows/sonarqube-public-repo.yml
@@ -77,7 +77,6 @@ jobs:
         echo "Go private modules set to ${{ inputs.go-private-modules }}"    
 
   SonarQube:
-    name: 'SonarQube Scan'
     runs-on: ubuntu-latest
     permissions: # Must change the job token permissions to use JWT auth
       id-token: write
@@ -93,13 +92,13 @@ jobs:
     - name: Prepare Secrets and Login into Azure
       if: ${{ inputs.visibility == 'public' }}
       id: get-aad-secret
-      uses: prgs-community/githubactions-reusableworkflow-sonarqube/.github/actions/azure-login@0.81
+      uses: 'prgs-community/githubactions-reusableworkflow-sonarqube/.github/actions/azure-login@0.81'
       with:
         akeyless-access-id: '${{ secrets.AKEYLESS_JWT_ID }}'
 
     - name: Add runner IP to Firewall List
       if: ${{ inputs.visibility == 'public' }}
-      uses: prgs-community/githubactions-reusableworkflow-sonarqube/.github/actions/update-firewall-rule@0.81
+      uses: 'prgs-community/githubactions-reusableworkflow-sonarqube/.github/actions/update-firewall-rule@0.81'
       with:
         action-to-execute: add
 
