--- a/.github/workflows/sonarqube-public-repo.yml
+++ b/.github/workflows/sonarqube-public-repo.yml
@@ -130,10 +130,10 @@ jobs:
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         
 #TODO: Test adding Irfan's quality reporting stage inline here after sonar run (https://github.com/Progress-I360/github-action-reporting)
-# PRODUCT_NAME = [Chef360 | Courier | Inspec]
+# PRODUCT_NAME = [Chef360 | Courier | Inspec] @main removed
     - name: Run SonarQube report generation
       if: ${{ inputs.report-to-atlassian-dashboard == true && inputs.visibility == 'internal' }}
-      uses: Progress-I360/github-action-reporting/sonarqube@main
+      uses: Progress-I360/github-action-reporting/sonarqube
       with:
         PRODUCT_NAME: ${{ inputs.quality-product-name }}
         SONAR_APP_NAME: ${{ inputs.quality-sonar-app-name }}
@@ -141,14 +141,15 @@ jobs:
 
       # TESTING_TYPE = [Unit | Integration | e2e | api | Performance | Security]
       # ENVIRONMENT = [DEV | STAGE | PROD] (optional)
-    - name: Run report generation
-      if: ${{ inputs.report-to-atlassian-dashboard == true && inputs.report-unit-test-coverage == true && inputs.visibility == 'internal' }}
-      uses: Progress-I360/github-action-reporting/automation@main
-      with:
-        PRODUCT_NAME: ${{ inputs.quality-product-name }}
-        TESTING_TYPE: ${{ inputs.quality-testing-type }}
-        SERVICE_NAME: ${{ inputs.quality-service-name }}
-        JUNIT_REPORT: ${{ inputs.quality-junit-report }}
+      # TODO: uncomment this
+    # - name: Run report generation
+    #   if: ${{ inputs.report-to-atlassian-dashboard == true && inputs.report-unit-test-coverage == true && inputs.visibility == 'internal' }}
+    #   uses: Progress-I360/github-action-reporting/automation@main
+    #   with:
+    #     PRODUCT_NAME: ${{ inputs.quality-product-name }}
+    #     TESTING_TYPE: ${{ inputs.quality-testing-type }}
+    #     SERVICE_NAME: ${{ inputs.quality-service-name }}
+    #     JUNIT_REPORT: ${{ inputs.quality-junit-report }}
 
   # IP-RANGE-CONTROLLED no longer works... probably needs IP range refresh, cannot get throughto api.sonar
   # SonarQube:
